HW4.1 adtional continue

--- a/classWork5/index.html
+++ b/classWork5/index.html
@@ -113,10 +113,10 @@
 
     // k) отримує елемент з класом content_1 та заміняє  в ньому тест на довільний. Текст отримати з prompt()
 
-    // let Contents1 = document.getElementsByClassName('content_1');
-    // for (let content1Element of Contents1) {
-    //     content1Element.innerText = prompt()
-    // }
+    let Contents1 = document.getElementsByClassName('content_1');
+    for (let content1Element of Contents1) {
+        content1Element.innerText = prompt()
+    }
 
     // l) отримати елементи p та змінити їм padding на 20px
     //
