--- a/homeWork5.1/index.html
+++ b/homeWork5.1/index.html
@@ -8,6 +8,23 @@
 
 
 
+<script>
+
+    // - Створити форму з інпутом для введення ім'я, та action="index2.html".
+    // При відправці данних з форми, зберігати ім'я в localstorage, та переходити на index2.html.
+    // На index2.html виводити записане в localstorage ім'я в div
+
+    let form = document.createElement('form');
+    form.classList.add('registForm');
+    let registForm = document.getElementsByClassName('registForm');
+    let inputName = document.createElement('input');
+    form.appendChild(inputName);
+
+    document.body.appendChild(form);
+
+
+
+</script>
 
 
 </body>
