--- a/homeWork 5.2/index.html
+++ b/homeWork 5.2/index.html
@@ -18,7 +18,7 @@
             <label>price:<input type="text" name="price"></label>
         </div>
         <div>
-            <label>img:<input type="image" name="pictures" alt=""></label>
+            <label>img:<input type="text" name="pictures" alt=""></label>
         </div>
     </form>
 
