--- a/homeWork6.1/index.html
+++ b/homeWork6.1/index.html
@@ -7,10 +7,22 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
     <style>
+        .wrap-users {
+            display: flex;
+            width: 100%;
+            flex-wrap: wrap;
+        }
+        .user-box {
+            width: 50%;
+            border: 1px red solid;
+            text-align: center;
+            border-radius: 20px;
+        }
 
         .wrap-users h2 {
             background: aliceblue;
             width: 500px;
+            text-align: center;
         }
         .box-post p {
             background: silver;
