--- a/homeWork 5.2/index.html
+++ b/homeWork 5.2/index.html
@@ -1,35 +1,36 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <meta name="viewport"
+          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Document</title>
 </head>
 <body>
 
+<form id="getProduct" name="info">
+    <div>
+        <label>productName:<input type="text" name="productName"></label>
+    </div>
+    <div>
+        <label>quantity:<input type="text" name="quantityProduct"></label>
+    </div>
+    <div>
+        <label>price:<input type="text" name="price"></label>
+    </div>
+    <div>
+        <label>img:<input type="text" name="pictures" alt=""></label>
+    </div>
+</form>
 
-    <form id="getProduct" name="info">
-        <div>
-            <label>productName:<input type="text" name="productName"></label>
-        </div>
-        <div>
-            <label>quantity:<input type="text" name="quantityProduct"></label>
-        </div>
-        <div>
-            <label>price:<input type="text" name="price"></label>
-        </div>
-        <div>
-            <label>img:<input type="text" name="pictures" alt=""></label>
-        </div>
-    </form>
-
-    <button id="btn">Save</button>
-    <h2><a href="list.html">На сторінку товарів</a></h2>
+<button id="btn">Save</button>
+<h2><a href="list.html">На сторінку товарів</a></h2>
 
 
 
 
 <script src="getProduct.js"></script>
-
 
 </body>
 </html>
