--- a/first_project/post-details.html
+++ b/first_project/post-details.html
@@ -6,17 +6,11 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
-
-    <link rel="stylesheet" href="style/user-details.css">
 </head>
 <body>
+<div id="wrap-post"></div>
 
 
-
-
-
-
-
-<script src="user-details.js"></script>
+<script src="post-details.js"></script>
 </body>
 </html>
