first project continue

--- a/first_project/post-details.html
+++ b/first_project/post-details.html
@@ -6,9 +6,12 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <link rel="stylesheet" href="style/post_details.css">
 </head>
 <body>
 <div id="wrap-post"></div>
+<div class="buttonWrap"></div>
+<div class="commentBox"></div>
 
 
 <script src="post-details.js"></script>
