--- a/first_project/user-details.html
+++ b/first_project/user-details.html
@@ -11,7 +11,9 @@
 </head>
 <body>
 
-<div id="wrap-user"></div>
+<div id="wrap-user">
+    <h1>User card</h1>
+</div>
 <div class="buttonWrap"></div>
 <div class="postBox"></div>
 
