first project finish

--- a/first_project/user-details.html
+++ b/first_project/user-details.html
@@ -14,9 +14,11 @@
 <div id="wrap-user">
     <h1>User card</h1>
 </div>
-<div class="buttonWrap"></div>
-<div class="postBox"></div>
-
+<div class="show-detal">
+    <div class="buttonWrap">
+        <button class="btn-click"></button>
+    </div>
+</div>
 
 
 
